--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This is a CLI ATM machine pkg.",
   "main": "index.js",
   "type": "module",
+  "bin": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,6 +23,7 @@
   "homepage": "https://github.com/Metaverse-Nabeel/ATM-machine-npm-pkg#readme",
   "dependencies": {
     "@faker-js/faker": "^8.1.0",
+    "chalk": "^5.3.0",
     "inquirer": "^9.2.11"
   },
   "devDependencies": {
